--- a/engine/audio/CMakeLists.txt
+++ b/engine/audio/CMakeLists.txt
@@ -6,4 +6,4 @@ add_library(audio
 )
 
 target_include_directories(audio PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${SDL2_INCLUDE_DIRS} ${SDL2_MIXER_INCLUDE_DIRS})
-target_link_libraries(audio PRIVATE SDL2::SDL2 SDL2_mixer::SDL2_mixer)
+target_link_libraries(audio PUBLIC SDL2::SDL2 SDL2_mixer::SDL2_mixer)
