--- a/engine/graphics/CMakeLists.txt
+++ b/engine/graphics/CMakeLists.txt
@@ -7,5 +7,5 @@ add_library(graphics
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 
-target_include_directories(graphics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
-target_link_libraries(graphics PUBLIC util PRIVATE SDL2::SDL2 SDL2_image::SDL2_image)
+target_include_directories(graphics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+target_link_libraries(graphics PUBLIC util SDL2::SDL2 SDL2_image::SDL2_image)
