11/14 - Functional Move, CloseDoor, and OpenDoor

--- a/content/actions/CMakeLists.txt
+++ b/content/actions/CMakeLists.txt
@@ -1,5 +1,8 @@
 add_library(actions
-  rest.cpp
+        rest.cpp
+        move.cpp
+        closedoor.cpp
+        opendoor.cpp
 )
 
 target_include_directories(actions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
