11/16 - Added monsters with wandering AI and pursuit movement towards the hero

--- a/content/actions/CMakeLists.txt
+++ b/content/actions/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(actions
         move.cpp
         closedoor.cpp
         opendoor.cpp
+        wander.cpp
 )
 
 target_include_directories(actions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
