11/22/23 - Two new monsters. Added working attack

--- a/content/actions/CMakeLists.txt
+++ b/content/actions/CMakeLists.txt
@@ -1,9 +1,10 @@
 add_library(actions
-        rest.cpp
-        move.cpp
-        closedoor.cpp
-        opendoor.cpp
-        wander.cpp
+    rest.cpp
+    move.cpp
+    closedoor.cpp
+    opendoor.cpp
+    wander.cpp
+    attack.cpp
 )
 
 target_include_directories(actions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
