--- a/content/events/CMakeLists.txt
+++ b/content/events/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(events
-  updatefov.cpp
+    updatefov.cpp
+    hit.cpp
+    die.cpp
 )
 
 target_include_directories(events PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
