--- a/content/weapons/CMakeLists.txt
+++ b/content/weapons/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(weapons
-  bite.cpp
+    bite.cpp
+    cleaver.cpp
 )
 
 target_include_directories(weapons PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
