11/23/23 - Added two new weapons for monsters - Fixed styling

--- a/content/weapons/CMakeLists.txt
+++ b/content/weapons/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(weapons
     bite.cpp
     cleaver.cpp
+    spear.cpp
+    knife.cpp
 )
 
 target_include_directories(weapons PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
