11/27/23 - Modified attack.cpp - Added thrust animation for cleaver

--- a/content/events/CMakeLists.txt
+++ b/content/events/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(events
     updatefov.cpp
     hit.cpp
     die.cpp
+    thrust.cpp
 )
 
 target_include_directories(events PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
