11/29/23 - Added thrust and swing animations for cleaver, spear, and knife

--- a/content/events/CMakeLists.txt
+++ b/content/events/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(events
     hit.cpp
     die.cpp
     thrust.cpp
+    swing.cpp
 )
 
 target_include_directories(events PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
