12/5/23 - Sound support, barebone chest function

--- a/content/actions/CMakeLists.txt
+++ b/content/actions/CMakeLists.txt
@@ -5,6 +5,9 @@ add_library(actions
     opendoor.cpp
     wander.cpp
     attack.cpp
+    cast_lightning.cpp
+    openchest.cpp
+    throwaction.cpp
 )
 
 target_include_directories(actions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
