--- a/content/entities/CMakeLists.txt
+++ b/content/entities/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(entities
-  heros.cpp
-  monsters.cpp
+    heros.cpp
+    monsters.cpp
+    chests.cpp
 )
 
 target_include_directories(entities PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
