12/8/23 - Monsters drop hearts on death - Modified formatting

--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -1,5 +1,5 @@
+add_subdirectory(items)
 add_subdirectory(events)
 add_subdirectory(actions)
 add_subdirectory(weapons)
 add_subdirectory(entities)
-
