--- a/content/events/CMakeLists.txt
+++ b/content/events/CMakeLists.txt
@@ -7,7 +7,8 @@ add_library(events
     lightning.cpp
     audioevent.cpp
     throw.cpp
+    droploot.cpp
 )
 
 target_include_directories(events PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(events PUBLIC engine)
+target_link_libraries(events PUBLIC engine items)
