12/12/23 - Working mimic monster - Progress on chests opening

--- a/content/actions/CMakeLists.txt
+++ b/content/actions/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(actions
     openchest.cpp
     throwaction.cpp
     pickupitem.cpp
+    mimicbite.cpp
 )
 
 target_include_directories(actions PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
