12/13/23 - Working chest DropLoot - Partial work on inventory

--- a/content/items/CMakeLists.txt
+++ b/content/items/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_library(items
     heart.cpp
+    axeitem.cpp
+    sworditem.cpp
 )
 
 target_include_directories(items PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
